0x07-python-test_driven_development/tests/0-add_integer.txt
Python 3.11.5 (main, Aug 30 2023, 00:13:08) [Clang 14.0.7 (https://android.googlesource.com/toolchain/llvm-project 4c603efb0 on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> from 0-add_integer.py import add_integer
  File "<stdin>", line 1
    from 0-add_integer.py import add_integer
         ^
SyntaxError: invalid syntax
>>> add_integer = __import__("0-add_integer.py").add_integer
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named '0-add_integer.py'; '0-add_integer' is not a package
>>> add_integer = __import__("0-add_integer").add_integer
>>> add_integer(2, 3)
5
>>> add_integer(1, 0)
1
>>> add_integer(40)
138
>>> add_integer("e")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/data/data/com.termux/files/home/alx/alx-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 8, in add_integer
    raise TypeError("a must be an integer")
TypeError: a must be an integer
>>> add_integer(3, "fff")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/data/data/com.termux/files/home/alx/alx-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 11, in add_integer
    raise TypeError("b must be an integer")
TypeError: b must be an integer
>>> add_integer(3.4, 1.2)
4
>>> add_integer(float('inf'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/data/data/com.termux/files/home/alx/alx-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 13, in add_integer
    return int(a) + int(b)
           ^^^^^^
OverflowError: cannot convert float infinity to integer
>>> add_integer(float('nan'))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/data/data/com.termux/files/home/alx/alx-higher_level_programming/0x07-python-test_driven_development/0-add_integer.py", line 13, in add_integer
    return int(a) + int(b)
           ^^^^^^
ValueError: cannot convert float NaN to integer
>>> add_integer()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: add_integer() missing 1 required positional argument: 'a'

